Fix texture styles on mobile

--- a/assets/less/hel/hearing-page.less
+++ b/assets/less/hel/hearing-page.less
@@ -154,6 +154,9 @@
             font-size: 1.4rem;
         }
     }
+    &__edit-form {
+        padding-top: 10px;
+    }
 }
 
 .comment-form {
